trying to fix image stretching(shows ok on desktop but not mobile)

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -294,9 +294,13 @@ input[type=text], select, textarea {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        size: 50%;
         margin: 50px;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-weight: lighter;
         color: #364958;
+    }
+
+    .blog img{
+        object-fit: cover;
+
     }
